examples/ingress/traefik/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: www.web1.com
    http:
      paths:
      - backend:
          service:
            name: web1
            port:
              number: 80
        path: /
        pathType: Exact
  - host: www.web2.com
    http:
      paths:
      - backend:
          service:
            name: web2
            port:
              number: 80
        path: /
        pathType: Exact
---
